@@ -1,0 +1,1 @@
+This is an example binary secret stored as a file
