@@ -1,85 +1,0 @@
-{
-  "id": "/example-dependency",
-  "groups": [
-    {
-      "id": "/example-dependency/database",
-      "apps": [
-         {
-  "id": "/example-dependency/database/mysql",
-  "backoffFactor": 1.15,
-  "backoffSeconds": 1,
-  "cmd": "sleep 10000",
-  "container": {
-    "type": "MESOS",
-    "volumes": []
-  },
-  "cpus": 0.1,
-  "disk": 0,
-  "instances": 1,
-  "maxLaunchDelaySeconds": 3600,
-  "mem": 128,
-  "gpus": 0,
-  "networks": [
-    {
-      "mode": "host"
-    }
-  ],
-  "portDefinitions": [],
-  "requirePorts": false,
-  "upgradeStrategy": {
-    "maximumOverCapacity": 1,
-    "minimumHealthCapacity": 1
-  },
-  "killSelection": "YOUNGEST_FIRST",
-  "unreachableStrategy": {
-    "inactiveAfterSeconds": 0,
-    "expungeAfterSeconds": 0
-  },
-  "healthChecks": [],
-  "fetch": [],
-  "constraints": []
-} 
-       ]
-    },{
-      "id": "/example-dependency/app",
-      "dependencies": ["/example-dependency/database"],
-      "apps": [
-         {
-  "id": "/example-dependency/app/nginx",
-  "backoffFactor": 1.15,
-  "backoffSeconds": 1,
-  "cmd": "sleep 10000",
-  "container": {
-    "type": "MESOS",
-    "volumes": []
-  },
-  "cpus": 0.1,
-  "disk": 0,
-  "instances": 1,
-  "maxLaunchDelaySeconds": 3600,
-  "mem": 128,
-  "gpus": 0,
-  "networks": [
-    {
-      "mode": "host"
-    }
-  ],
-  "portDefinitions": [],
-  "requirePorts": false,
-  "upgradeStrategy": {
-    "maximumOverCapacity": 1,
-    "minimumHealthCapacity": 1
-  },
-  "killSelection": "YOUNGEST_FIRST",
-  "unreachableStrategy": {
-    "inactiveAfterSeconds": 0,
-    "expungeAfterSeconds": 0
-  },
-  "healthChecks": [],
-  "fetch": [],
-  "constraints": []
-} 
-      ]
-    }
-  ]
-}
