@@ -1,9 +1,10 @@
 3-20-18 UPDATE:
 Added kubernetes GA to auto install (all defaults)
 Updated cassandra autoinstall to be 2nd to most recent version
-Removed hard coded paths in the script
 Renamed script from dcosnew to runme
+Removed hard coded paths in the script, you must run runme.sh from it's folder
 Added launching of chrome for K8S dashboard
+Added example-dependency.json, which is a marathon group (2 apps tied together)
 
 TODO: ssh-add ~/ccm-priv.key, not included in repo
 
